--- a/index.html
+++ b/index.html
@@ -165,6 +165,12 @@ $(document).ready(function () {
 </div>
 <div id="r-code" class="section level2">
 <h2>R code</h2>
+<div id="r-code-for-network-construction" class="section level3">
+<h3>R code for network construction</h3>
+<ul>
+<li>R code for network construction</li>
+</ul>
+</div>
 <div id="r-code-for-figures" class="section level3">
 <h3>R code for figures</h3>
 <ul>
