--- a/index.html
+++ b/index.html
@@ -126,32 +126,32 @@ $(document).ready(function () {
 <h2>Forest Soil Gene Catalogue</h2>
 <ul>
 <li><dl>
-<dt><a href="http://www.zju.edu.cn">Reference gene catalog</a> (fasta, 100M)</dt>
-<dd>Sequences of the *** gene non-redundant gene catalog.
+<dt><a href="https://pan.zju.edu.cn/share/94ffb6070db4b016de469ede0c">Reference gene catalog</a> (fasta, 165 MB)</dt>
+<dd>Sequences of the 505,840 gene non-redundant gene catalog.
 </dd>
 </dl></li>
 <li><dl>
-<dt><a href="http://www.zju.edu.cn">De-nove assembled contigs</a> (fasta)</dt>
+<dt><a href="https://pan.zju.edu.cn/share/fe6a02c1a0deeaf999c7220911">De-nove assembled contigs</a> (fasta, 345 MB)</dt>
 <dd>The contig sequences from which the gene set originated.
 </dd>
 </dl></li>
 <li><dl>
-<dt><a href="http://www.zju.edu.cn">Count matrix of the reference gene catalog</a> (csv)</dt>
+<dt><a href="https://pan.zju.edu.cn/share/e0d578cecb3c17afb38c45cbbd">Count matrix of the reference gene catalog</a> (csv, 58 MB)</dt>
 <dd>A * genes v.s. 45 samples seqeunce-read count-matrix.
 </dd>
 </dl></li>
 <li><dl>
-<dt><a href="http://www.zju.edu.cn">PFAM annotation of the gene catalog</a> (csv)</dt>
+<dt><a href="https://pan.zju.edu.cn/share/cd43a0260eb7e809148fdfde5f">PFAM annotation of the gene catalog</a> (txt, 118 MB)</dt>
 <dd>a reference table linking PFAM IDs to the contig IDs
 </dd>
 </dl></li>
 <li><dl>
-<dt><a href="http://www.zju.edu.cn">KEGG annotation of the gene catalog</a> (csv)</dt>
+<dt><a href="https://pan.zju.edu.cn/share/eba73ccd2b10e8bc1463cd62c6">KEGG annotation of the gene catalog</a> (tsv, 13 MB)</dt>
 <dd>a reference table linking KO IDs to the contig IDs
 </dd>
 </dl></li>
 <li><dl>
-<dt><a href="http://www.zju.edu.cn">Uniprot annotation of the gene catalog</a> (csv)</dt>
+<dt><a href="https://pan.zju.edu.cn/share/15511f1e6a2a27ca6c61700f5b">Uniprot annotation of the gene catalog</a> (tsv, 18 MB)</dt>
 <dd>a reference table linking Uniprot IDs and GO to the contig IDs
 </dd>
 </dl></li>
@@ -163,36 +163,17 @@ $(document).ready(function () {
 <li>Sequence data were deposited at NCBI with the accession code <a href="http://www.zju.edu.cn">SRA12345678</a></li>
 </ul>
 </div>
-<div id="r-code" class="section level2">
-<h2>R code</h2>
-<div id="r-code-for-network-construction" class="section level3">
-<h3>R code for network construction</h3>
-<ul>
-<li>R code for network construction</li>
-</ul>
+<div id="related-articles" class="section level2">
+<h2>Related Articles</h2>
+<div id="distinct-biogeographic-patterns-for-archaea-bacteria-and-fungi-along-the-vegetation-gradient-at-the-continental-scale-in-eastern-china" class="section level3">
+<h3><a href="https://www.ncbi.nlm.nih.gov/pubmed/26771927">Distinct Biogeographic Patterns for Archaea, Bacteria, and Fungi along the Vegetation Gradient at the Continental Scale in Eastern China</a></h3>
+<p><em>mSystems 2017 2:e00174-16. doi: 10.1128/mSystems.00174-16.</em></p>
+<p><strong>Abstract</strong> The natural forest ecosystem in Eastern China, from tropical forest to boreal forest, has declined due to cropland development during the last 300 years, yet little is known about the historical biogeographic patterns and driving processes for the major domains of microorganisms along this continental-scale natural vegetation gradient. We predicted the biogeographic patterns of soil archaeal, bacterial, and fungal communities across 110 natural forest sites along a transect across four vegetation zones in Eastern China. The distance decay relationships demonstrated the distinct biogeographic patterns of archaeal, bacterial, and fungal communities. While historical processes mainly influenced bacterial community variations, spatially autocorrelated environmental variables mainly influenced the fungal community. Archaea did not display a distance decay pattern along the vegetation gradient. Bacterial community diversity and structure were correlated with the ratio of acid oxalate-soluble Fe to free Fe oxides (Feo/Fed ratio). Fungal community diversity and structure were influenced by dissolved organic carbon (DOC) and free aluminum (Ald), respectively. The role of these environmental variables was confirmed by the correlations between dominant operational taxonomic units (OTUs) and edaphic variables. However, most of the dominant OTUs were not correlated with the major driving variables for the entire communities. These results demonstrate that soil archaea, bacteria, and fungi have different biogeographic patterns and driving processes along this continental-scale natural vegetation gradient, implying different community assembly mechanisms and ecological functions for archaea, bacteria, and fungi in soil ecosystems. IMPORTANCE Understanding biogeographic patterns is a precursor to improving our knowledge of the function of microbiomes and to predicting ecosystem responses to environmental change. Using natural forest soil samples from 110 locations, this study is one of the largest attempts to comprehensively understand the different patterns of soil archaeal, bacterial, and fungal biogeography at the continental scale in eastern China. These patterns in natural forest sites could ascertain reliable soil microbial biogeographic patterns by eliminating anthropogenic influences. This information provides guidelines for monitoring the belowground ecosystem’s decline and restoration. Meanwhile, the deviations in the soil microbial communities from corresponding natural forest states indicate the extent of degradation of the soil ecosystem. Moreover, given the association between vegetation type and the microbial community, this information could be used to predict the long-term response of the underground ecosystem to the vegetation distribution caused by global climate change.</p>
 </div>
-<div id="r-code-for-figures" class="section level3">
-<h3>R code for figures</h3>
-<ul>
-<li>Figure 1</li>
-<li>Figure 2</li>
-<li>Figure 3</li>
-<li>Figure 4</li>
-<li>Figure 5</li>
-<li>Figure 6</li>
-</ul>
-</div>
-<div id="r-code-for-supplementary-figures" class="section level3">
-<h3>R code for supplementary figures</h3>
-<ul>
-<li>Figure S1</li>
-<li>Figure S2</li>
-<li>Figure S3</li>
-<li>Figure S4</li>
-<li>Figure S5</li>
-<li>Figure S6</li>
-<li>Figure S7</li>
-</ul>
+<div id="geographic-patterns-of-co-occurrence-network-topological-features-for-soil-microbiota-at-continental-scale-in-eastern-china" class="section level3">
+<h3><a href="https://www.ncbi.nlm.nih.gov/pubmed/26771927">Geographic patterns of co-occurrence network topological features for soil microbiota at continental scale in eastern China</a></h3>
+<p><em>ISME J. 2016 10:1891-901. doi: 10.1038/ismej.2015.261</em></p>
+<p><strong>Abstract</strong> Soil microbiota play a critical role in soil biogeochemical processes and have a profound effect on soil functions. Recent studies have revealed microbial co-occurrence patterns in soil microbial communities, yet the geographic pattern of topological features in soil microbial co-occurrence networks at the continental scale are largely unknown. Here, we investigated the shifts of topological features in co-occurrence networks inferred from soil microbiota along a continental scale in eastern China. Integrating archaeal, bacterial and fungal community datasets, we inferred a meta-community co-occurrence network and analyzed node-level and network-level topological shifts associated with five climatic regions. Both node-level and network-level topological features revealed geographic patterns wherein microorganisms in the northern regions had closer relationships but had a lower interaction influence than those in the southern regions. We further identified topological differences associated with taxonomic groups and demonstrated that co-occurrence patterns were random for archaea and non-random for bacteria and fungi. Given that microbial interactions may contribute to soil functions more than species diversity, this geographic shift of topological features provides new insight into studying microbial biogeographic patterns, their organization and impacts on soil-associated function.</p>
 </div>
 </div>
 
